<resources>
    <string name="app_name">ICM</string>
    <string name="juan_andres_bello">Juan Andres Bello</string>
    <string name="_25_1921_2026">25-1921-2026</string>
    <string name="logoicm">logoicm</string>
    <string name="grupo_I">Grupo I</string>
    <string name="ingresar">Ingresar</string>
    <string name="calcular">Calcular</string>
    <string name="regresar">Regresar</string>
    <string name="peso_kg">Peso (kg):</string>
    <string name="nivel_de_obecidad">NIVEL DE OBECIDAD</string>
    <string name="todo">TODO</string>
    <string name="peso">Peso :</string>
    <string name="altura">Altura :</string>
    <string name="nuevo">Nuevo</string>
    <string name="salir">Salir</string>
</resources>