<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:contentDescription="@string/logoicm"
            app:srcCompat="@drawable/icm" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txtViewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/juan_andres_bello"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txtViewCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_25_1921_2026"

            android:textAlignment="center"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txtViewGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/grupo_I"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pantallaData"
            android:text="@string/ingresar"
            app:cornerRadius="10sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>